fix project related errors and java warnings